[gd_scene load_steps=9 format=3 uid="uid://bdevl74cx1y01"]

[ext_resource type="Script" uid="uid://c76tnbw2ekk3y" path="res://game/game/alice_controller.gd" id="1_02yvw"]
[ext_resource type="Texture2D" uid="uid://b7irlyxwi45i0" path="res://icon.svg" id="2_gesbw"]
[ext_resource type="Texture2D" uid="uid://bk2rqpin2idcc" path="res://ASSETS/placeables/floor.png" id="2_u2o8n"]
[ext_resource type="Texture2D" uid="uid://dyfgahnrnw8fd" path="res://ASSETS/placeables/tower.png" id="3_gesbw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_c2d63"]
atlas = ExtResource("3_gesbw")
region = Rect2(0, 0, 50, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_m71v8"]
atlas = ExtResource("3_gesbw")
region = Rect2(50, 0, 50, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_f73h8"]
atlas = ExtResource("3_gesbw")
region = Rect2(0, 70, 50, 70)

[sub_resource type="SpriteFrames" id="SpriteFrames_6lebb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_u2o8n")
}],
"loop": true,
"name": &"floorTEST",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c2d63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m71v8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f73h8")
}],
"loop": true,
"name": &"tower",
"speed": 5.0
}]

[node name="AliceController" type="Node2D"]
script = ExtResource("1_02yvw")

[node name="Panel" type="Panel" parent="."]
offset_left = 639.0
offset_top = 126.0
offset_right = 939.0
offset_bottom = 326.0

[node name="Tower" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 25.0
offset_top = 25.0
offset_right = 125.0
offset_bottom = 75.0
text = "Tower"

[node name="Wall" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 163.0
offset_top = 24.0
offset_right = 263.0
offset_bottom = 74.0
text = "Wall
"

[node name="Floor-test" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 25.0
offset_top = 125.0
offset_right = 125.0
offset_bottom = 175.0
text = "Floor (test)"

[node name="HealthBar" type="Panel" parent="."]
offset_left = 640.0
offset_top = 38.0
offset_right = 940.0
offset_bottom = 103.0

[node name="H1" type="Sprite2D" parent="HealthBar"]
modulate = Color(1, 0, 0, 1)
position = Vector2(46, 32)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_gesbw")

[node name="H2" type="Sprite2D" parent="HealthBar"]
modulate = Color(1, 0, 0, 1)
position = Vector2(113, 31)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_gesbw")

[node name="H3" type="Sprite2D" parent="HealthBar"]
modulate = Color(1, 0, 0, 1)
position = Vector2(182, 32)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_gesbw")

[node name="H4" type="Sprite2D" parent="HealthBar"]
modulate = Color(1, 0, 0, 1)
position = Vector2(254, 32)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_gesbw")

[node name="PlacePreview" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 1, 0.294118)
z_index = 10
position = Vector2(25, 35)
sprite_frames = SubResource("SpriteFrames_6lebb")
animation = &"floorTEST"

[connection signal="pressed" from="Panel/Tower" to="." method="_on_tower_pressed"]
[connection signal="pressed" from="Panel/Wall" to="." method="_on_wall_pressed"]
[connection signal="pressed" from="Panel/Floor-test" to="." method="_on_floortest_pressed"]
